# fog-horn

./: Cargo.toml  secret.json
src/: main.rs
src/commands/: ping.rs
src/voice/: voice.rs
