[package]
name = "fog-horn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
poise = "0.5.6"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird = "0.3.2"
tokio = {version = "1.32.0", features = ["rt-multi-thread"]}
